--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "card-player",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "main.js",
   "scripts": {
+    "start": "electron .",  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "electron": "^35.0.3"
+  }
 }
